# Mango

./: .gitignore  .gitmodules  CMakeLists.txt  Mango.cpp  README.md
Mango/: Mango.sln  Mango.vcxproj  Mango.vcxproj.filters
Mango/resource/model/pal/: 2.mtl
Mango/resource/model/shaderball/: shaderball.mtl
Mango/resource/shaders/: IBL.frag  IBL.vert  brdf.frag  cooktorrance.frag  cubemap.frag  cubemap.vert  gbuffer.frag  gbuffer.vert  lambert.frag  lambert.vert  light.frag  light.vert  phong.frag  phong.vert  ssao.frag  velocity.frag  velocity.vert
Mango/resource/shaders/lighting/: cubemap.frag  cubemap.vert  directionalbrdf.frag  enviromentbrdf.frag  enviromentbrdf.vert  light.frag  pointbrdf.frag  pointbrdf.vert  skybox.frag  skybox.vert
Mango/resource/shaders/lighting/ibl/: enviromentbrdf.frag  integratebrdf.frag  (+1 more)
Mango/resource/shaders/postprocess/: firstpass.frag  fxaa.frag  postprocess.frag  postprocess.vert  ssao.frag  ssaoblur.frag
Mango/src/: Mango.cpp  camera.cpp  cubemap.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  shape.cpp  texture.cpp
Mango/src/headers/: MangoEngine.h  basicshape.h  camera.h  cubemap.h  imconfig.h  light.h  lightobject.h  material.h  materialobject.h  mesh.h  model.h  shader.h  shape.h  shapeobject.h  skybox.h  texture.h  textureobject.h
resource/shaders/: gbuffer.frag  gbuffer.vert
resource/shaders/lighting/: directionalbrdf.frag  directionalbrdf.vert  lambert.frag  lambert.vert  light.frag  light.vert  pointbrdf.frag  skybox.frag  skybox.vert
resource/shaders/lighting/ibl/: enviromentbrdf.frag  integratebrdf.frag  prefilterbrdf.frag
resource/shaders/lighting/shadow/: shadow-map.frag  shadow-map.vert
resource/shaders/postprocess/: firstpass.frag  postprocess.vert  ssao.frag  ssao.vert  ssaoblur.frag
src/: CMakeLists.txt  camera.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  shader.cpp  shape.cpp  skybox.cpp  texture.cpp  utils.hpp
src/headers/: camera.h  camera.hpp  light.h  light.hpp  material.h  material.hpp  mesh.h  mesh.hpp  model.h  model.hpp  shader.h  shader.hpp  shape.h  shape.hpp  skybox.h  skybox.hpp  texture.h  texture.hpp
